--- a/index.html
+++ b/index.html
@@ -6,9 +6,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,700;1,6..12,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2>teste</h2>
+   <div class="superinfo-bg">
+       <div class="superinfo">
+           <p>Seg/Sex 08:00 às 18:00</p>
+           <a href="tel:+552199999999">+55 (21) 9999-9999</a>
+           <p>Av. Ali Perto, 330, Botafogo - RJ</p>
+       </div>
+   </div>
+   <header class="menu-bg">
+       <div class="menu">
+           <div class="menu-logo">
+               <a href="#">FlexBlog</a>
+           </div>
+           <nav class="menu-nav">
+               <ul>
+                   <li><a href="#sobre">Sobre</a></li>
+                   <li><a href="#produtos">Produtos</a></li>
+                   <li><a href="#preco">Preço</a></li>
+                   <li><a href="#qualidade">Qualidade</a></li>
+               </ul>
+           </nav>
+       </div>
+
+   </header>
+
+   <h1 class="intro">Novos valores e<br>propriedades de CSS</h1>
+   <section class="sobre">
+       <div class="sobre-info">
+        <h2>Sobre</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fugit facilis ratione explicabo, nesciunt quibusdam sint labore iste! Libero, et. Neque quo nostrum, eveniet modi ad eligendi necessitatibus quam maxime.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fugit facilis ratione explicabo, nesciunt quibusdam sint labore iste! Libero, et. Neque quo nostrum, eveniet modi ad eligendi necessitatibus quam maxime.</p>
+       </div>
+
+   </section>
 </body>
 </html>
