--- a/index.html
+++ b/index.html
@@ -1,46 +1,113 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>FlexBlog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,700;1,6..12,400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,700;1,6..12,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-   <div class="superinfo-bg">
-       <div class="superinfo">
-           <p>Seg/Sex 08:00 às 18:00</p>
-           <a href="tel:+552199999999">+55 (21) 9999-9999</a>
-           <p>Av. Ali Perto, 330, Botafogo - RJ</p>
-       </div>
-   </div>
-   <header class="menu-bg">
-       <div class="menu">
-           <div class="menu-logo">
-               <a href="#">FlexBlog</a>
-           </div>
-           <nav class="menu-nav">
-               <ul>
-                   <li><a href="#sobre">Sobre</a></li>
-                   <li><a href="#produtos">Produtos</a></li>
-                   <li><a href="#preco">Preço</a></li>
-                   <li><a href="#qualidade">Qualidade</a></li>
-               </ul>
-           </nav>
-       </div>
+    <div class="superinfo-bg">
+        <div class="superinfo">
+            <p>Seg/Sex 08:00 às 18:00</p>
+            <a href="tel:+552199999999">+55 (21) 9999-9999</a>
+            <p>Av. Ali Perto, 330, Botafogo - RJ</p>
+        </div>
+    </div>
+    <header class="menu-bg">
+        <div class="menu">
+            <div class="menu-logo">
+                <a href="#">FlexBlog</a>
+            </div>
+            <nav class="menu-nav">
+                <ul>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#produtos">Produtos</a></li>
+                    <li><a href="#preco">Preço</a></li>
+                    <li><a href="#qualidade">Qualidade</a></li>
+                </ul>
+            </nav>
+        </div>
 
-   </header>
+    </header>
 
-   <h1 class="intro">Novos valores e<br>propriedades de CSS</h1>
-   <section class="sobre">
-       <div class="sobre-info">
-        <h2>Sobre</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fugit facilis ratione explicabo, nesciunt quibusdam sint labore iste! Libero, et. Neque quo nostrum, eveniet modi ad eligendi necessitatibus quam maxime.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fugit facilis ratione explicabo, nesciunt quibusdam sint labore iste! Libero, et. Neque quo nostrum, eveniet modi ad eligendi necessitatibus quam maxime.</p>
-       </div>
+    <h1 class="intro">Novos valores e<br>propriedades de CSS</h1>
+    <section class="sobre">
+        <div class="sobre-info">
+            <h2>Sobre</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="sobre-img">
+            <img src="img/sobre1.jpg" alt="Sobre-1">
+        </div>
+        <div class="sobre-img">
+            <img src="img/sobre2.jpg" alt="Sobre-2">
+        </div>
 
-   </section>
+    </section>
+
+    <section class="produtos" id="produtos">
+        <h2>Produtos</h2>
+        <div class="produtos-container">
+            <div class="produtos-item purple">
+                <h2>Purple</h2>
+                <img src="img/produtos1.jpg" alt="Produto-1">
+            </div>
+            <div class="produtos-item pink">
+                <h2>Pink</h2>
+                <img src="img/produtos2.jpg" alt="Produto-2">
+            </div>
+            <div class="produtos-item blue">
+                <h2>Blue</h2>
+                <img src="img/produtos3.jpg" alt="Produto-3">
+            </div>
+            
+        </div>
+    </section>
+
+    <section class="price" id="price">
+        <div class="price-item">
+            <h2>Cobre</h2>
+            <span><sup>R$</sup>19</span>
+            <ul>
+                <li>Planos Ilimitados</li>
+                <li>Acesso Restrito</li>
+                <li>Conteúdo Secreto</li>
+                <li>Suporte 24h</li>
+            </ul>
+            <a href="#">Comprar</a>
+        </div>
+        <div class="price-item">
+            <h2>Prata</h2>
+            <span><sup>R$</sup>19</span>
+            <ul>
+                <li>Planos Ilimitados</li>
+                <li>Acesso Restrito</li>
+                <li>Conteúdo Secreto</li>
+                <li>Suporte 24h</li>
+            </ul>
+            <a href="#">Comprar</a>
+        </div>
+        <div class="price-item">
+            <h2>Ouro</h2>
+            <span><sup>R$</sup>19</span>
+            <ul>
+                <li>Planos Ilimitados</li>
+                <li>Acesso Restrito</li>
+                <li>Conteúdo Secreto</li>
+                <li>Suporte 24h</li>
+            </ul>
+            <a href="#">Comprar</a>
+        </div>
+                
+    </section>
 </body>
+
 </html>
